@@ -17,13 +17,14 @@ import qualified Annex.Queue
 type CommandActionRunner = CommandStart -> CommandCleanup
 
 {- Runs a command, starting with the check stage, and then
- - the seek stage. Finishes by printing the number of commandActions that
- - failed. -}
-performCommandAction :: Command -> CmdParams -> Annex ()
-performCommandAction Command { cmdseek = seek, cmdcheck = c, cmdname = name } params = do
+ - the seek stage. Finishes by running the continutation, and 
+ - then showing a count of any failures. -}
+performCommandAction :: Command -> CmdParams -> Annex () -> Annex ()
+performCommandAction Command { cmdseek = seek, cmdcheck = c, cmdname = name } params cont = do
 	mapM_ runCheck c
 	Annex.changeState $ \s -> s { Annex.errcounter = 0 }
 	seek params
+	cont
 	showerrcount =<< Annex.getState Annex.errcounter
   where
 	showerrcount 0 = noop
